force-app/main/default/objects/News_Source__mdt/News_Source__mdt.object-meta.xml
<CustomObject>
    <description>This metadata stores the news source names and their icons</description>
    <label>News Source</label>
    <pluralLabel>News Sources</pluralLabel>
</CustomObject>