force-app/main/default/objects/News_Source__mdt/fields/Available_by_domain__c.field-meta.xml
<CustomField>
    <fullName>Available_by_domain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field indicates if news article available by domain</description>
    <label>Available by domain</label>
    <type>Checkbox</type>
</CustomField>