force-app/main/default/objects/News_Source__mdt/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <description>This field stores the news source icon URL</description>
    <inlineHelpText>Icon URL</inlineHelpText>
    <label>Icon URL</label>
    <type>Url</type>
</CustomField>