force-app/main/default/objects/News_Source__mdt/fields/Source_API_name__c.field-meta.xml
<CustomField>
    <fullName>Source_API_name__c</fullName>
    <description>This field stores the API name of the news source for NewsAPI.org</description>
    <label>Source API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>